--- a/spotiwood.ui/src/Spotiwood.UI.App/App.razor
+++ b/spotiwood.ui/src/Spotiwood.UI.App/App.razor
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Authorization
+@using Spotiwood.UI.App.Layouts;
 @inject NavigationManager _navigation
 
 <CascadingAuthenticationState>
