--- a/spotiwood.ui/src/Spotiwood.UI.App/Pages/Index.razor
+++ b/spotiwood.ui/src/Spotiwood.UI.App/Pages/Index.razor
@@ -2,10 +2,10 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication;
 @using Spotiwood.UI.App.Components.Authentication
+@using Spotiwood.UI.App.Components.Branding
+@using Spotiwood.UI.App.Layouts;
+@layout Landing
 @inject NavigationManager _navigator
 @attribute [AllowAnonymous]
 
-<h1>Hello, world!</h1>
-
-<LoginButton />
-<LogoutButton />
+<Hero />
