--- a/spotiwood.ui/src/Spotiwood.UI.App/Components/Branding/Hero.razor
+++ b/spotiwood.ui/src/Spotiwood.UI.App/Components/Branding/Hero.razor
@@ -2,10 +2,11 @@
 @using Spotiwood.UI.App.Components.Authentication
 
 <section class="text-center">
-    <h1 class="mb-8 text-4xl font-black text-slate-900 lg:mb-12 lg:text-6xl drop-shadow-lg">
-        Looking for 
-        <span class=" text-slate-800 underline decoration-pink-600 decoration-wavy decoration-4 underline-offset-8">awesome</span>
-        <span class="text-pink-600">playlists?</span>
+    <h1 class="mb-8 text-5xl font-black lg:mb-12 lg:text-7xl drop-shadow-lg">
+        <span class="font-normal">Looking for awesome</span>
+        <span class="text-slate-900 underline decoration-blue-600 decoration-double decoration-4 underline-offset-8">
+            playlists?
+        </span>
     </h1>
 
     <div class="flex flex-row justify-center gap-4">
