--- a/spotiwood.ui/src/Spotiwood.UI.App/Pages/Application/SearchDetails.razor
+++ b/spotiwood.ui/src/Spotiwood.UI.App/Pages/Application/SearchDetails.razor
@@ -5,6 +5,7 @@
 @using Spotiwood.Framework.Api.Infrastructure;
 @using Spotiwood.Framework.Messaging;
 @using System.Text.Json;
+@using Spotiwood.UI.App.Components.Playlists
 @using Spotiwood.UI.App.Components.Search
 @using Spotiwood.UI.App.Layouts;
 @page "/search/{Id}"
@@ -17,20 +18,32 @@
 }
 else if (SearchDetail?.IsT1 is true)
 {
-    <SearchDetailCard SearchDetail=SearchDetail.Value.AsT1 />
+    <SearchDetailCard SearchDetail=@SearchDetail.Value.AsT1 />
 }
-else
+
+@if (Playlist?.IsT0 is true)
 {
-    <span>Nope dude</span>
+    <span>@Playlist!.Value.AsT0.Message</span>
+}
+else if (Playlist?.IsT1 is true)
+{
+    <PlaylistDetails Playlist=@Playlist.Value.AsT1 />
+}
+else if (Playlist?.IsT2 is true)
+{
+    <PlaylistExport Identifier=@Id DefaultTitle=@SearchDetail?.AsT1?.Title />
 }
 
 @code {
     private OneOf<Error, SearchDetail>? SearchDetail { get; set; }
+
+    private OneOf<Error, Playlist, NotFound>? Playlist { get; set; }
 
     [Parameter] public string Id { get; init; } = default!;
 
     protected async override Task OnInitializedAsync()
     {
         SearchDetail = await _service.SearchDetailsAsync(Id);
+        Playlist = await _service.PlaylistDetailsAsync(Id);
     }
 }
